templates/laravel-octane_template.yaml
---
# Source: laravel-octane/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-laravel-octane
  labels:
    helm.sh/chart: laravel-octane-1.0.0
    app.kubernetes.io/name: laravel-octane
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: laravel-octane
    app.kubernetes.io/instance: release-name
    octane.laravel.com/pod-type: web
---
# Source: laravel-octane/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: release-name-laravel-octane
  labels:
    helm.sh/chart: laravel-octane-1.0.0
    app.kubernetes.io/name: laravel-octane
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: laravel-octane
      app.kubernetes.io/instance: release-name
      octane.laravel.com/pod-type: web
  template:
    metadata:
      labels:
        app.kubernetes.io/name: laravel-octane
        app.kubernetes.io/instance: release-name
        octane.laravel.com/pod-type: web
    spec:
      volumes:
        - name: env
          secret:
            secretName:  release-name-env 
        - name: php-ini-config
          configMap:
            name:  release-name-php-ini-config 

      serviceAccountName: release-name-laravel-octane

      securityContext:
        {}

      containers:
        - name: octane
          securityContext:
            {}
          image: "quay.io/renokico/laravel-helm-demo:octane-0.6.0"
          imagePullPolicy: IfNotPresent
          command:
            - php
            - -d
            - variables_order=EGPCS
            - artisan
            - octane:start
            - --server=swoole
            - --host=0.0.0.0
            - --port=80
          volumeMounts:
            - name: env
              mountPath: /tmp/.env
              subPath: .env
            - name: php-ini-config
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          resources:
            {}
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - cp /tmp/.env /var/www/html/.env && cd /var/www/html && sh deploy.sh
        - name: scheduler
          securityContext:
            {}
          image: "quay.io/renokico/laravel-helm-demo:octane-0.6.0"
          imagePullPolicy: IfNotPresent
          command:
            - php
            - artisan
            - schedule:work
          volumeMounts:
            - name: env
              mountPath: /tmp/.env
              subPath: .env
            - name: php-ini-config
              mountPath: /usr/local/etc/php/php.ini
              subPath: php.ini
          readinessProbe:
            exec:
              command:
                - php
                - -v
            initialDelaySeconds: 5
            periodSeconds: 5
          livenessProbe:
            exec:
              command:
                - php
                - -v
            initialDelaySeconds: 5
            periodSeconds: 5
          resources:
            {}
          lifecycle:
            postStart:
              exec:
                command:
                  - /bin/sh
                  - -c
                  - cp /tmp/.env /var/www/html/.env && cd /var/www/html && sh deploy.sh
---
# Source: laravel-octane/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: release-name-laravel-octane
  labels:
    helm.sh/chart: laravel-octane-1.0.0
    app.kubernetes.io/name: laravel-octane
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/version: "8.0.0"
    app.kubernetes.io/managed-by: Helm
  annotations:
    nginx.ingress.kubernetes.io/custom-http-errors: "404"
spec:
  rules:
    - host: "test.laravel.com"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: release-name-laravel-octane
                port:
                  number: 80
